--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,3 +2,4 @@ FROM mcr.microsoft.com/devcontainers/rust:0-1-bullseye
 
 RUN echo 'alias comp="cargo compete"' >> /etc/bash.bashrc
 RUN echo 'alias rust142="rustup default 1.42.0-aarch64-unknown-linux-gnu"' >> /etc/bash.bashrc
+RUN echo 'alias rust169="rustup default 1.69.0-aarch64-unknown-linux-gnu"' >> /etc/bash.bashrc
