--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,4 +5,9 @@
         "**/.cargo": true,
         "**/Cargo.lock": true,
     },
+    "files.exclude": {
+        "**/.cargo": true,
+        "**/.devcontainer": true,
+        "**/Cargo.lock": true,
+    }
 }
